--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "firebase": "^7.6.1",
+    "fuse.js": "^3.4.6",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "popper.js": "^1.16.0",
     "react": "16.7.0-alpha.2",
     "react-dom": "16.7.0-alpha.2",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "2.1.0",
-    "react-text-mask": "^5.4.3"
+    "react-scripts": "^3.3.0",
+    "react-text-mask": "^5.4.3",
+    "use-debounce": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
